--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <section class="who">
+    <section if="model" class="who">
         <div class="content">
             <div class="text-block">
                 <h1>{model.whoHeadline}</h1>
@@ -8,7 +8,7 @@
         </div>
         <img src="{model.whoImage}">
     </section>
-    <section class="what">
+    <section if="model" class="what">
         <div class="content">
             <h1>{model.whatHeadline}</h1>
             <div data-html="whatBlurb" skip="true"></div>
@@ -22,13 +22,13 @@
             </div>
         </div>
     </section>
-    <section class="where content">
+    <section if="model" class="where content">
         <div class="text-content">
             <h1>{model.whereHeadline}</h1>
             <div data-html="whereBlurb" skip="true"></div>
         </div>
     </section>
-    <div class="map">
+    <div if="model" class="map">
         <div class="content">
             <img src="{model.map}">
         </div>
