Details page accessibility fixes

--- a/src/app/components/shell/header/header.html
+++ b/src/app/components/shell/header/header.html
@@ -1,7 +1,5 @@
 <template args="model">
-    <div class="skiptocontent">
-        <a href="#maincontent">skip to main content</a>
-    </div>
+    <a class="skiptocontent" href="#main">skip to main content</a>
 
     <sticky-note skip="true"></sticky-note>
     <nav class="meta-nav" skip="true"></nav>
