Handle images in sticky note
content in the CMS should be of the form
```
<a href="/give"><img class="desktop" src="..."><img class="mobile" src="..."></a>

--- a/src/app/components/shell/sticky-note/sticky-note.html
+++ b/src/app/components/shell/sticky-note/sticky-note.html
@@ -20,7 +20,8 @@
      if="model.expires"
      class="html-content"
      role="alert"
-     skip="true"
-     data-html="content"
-    ></div>
+    >
+        <button class="put-away"><span class="fa fa-times"></span></button>
+        <span data-html="content" skip="true"></span>
+    </div>
 </template>
