--- a/src/app/pages/impact-dev/map/map.scss
+++ b/src/app/pages/impact-dev/map/map.scss
@@ -464,7 +464,7 @@
     #testmonal_toggle {
         margin-left: 430px;
     }
-    #apply_fltr_btn {
+    .applyFltrBtn {
         height: 50px;
         width: 140px;
         border-radius: 2px;
