--- a/src/app/pages/impact-dev/map/mapdropdown.html
+++ b/src/app/pages/impact-dev/map/mapdropdown.html
@@ -26,25 +26,29 @@
                             <div class="rColumn_body">Yes</div>
                         </td>
                     </tr>
-                </div>
-                <div class="toggle_dataList_body">
-                    <div class="tdlb_container">
-                        <p class="tdl_body_desc">Teaming up with the other OpenStax Institutional Partner schools<br>
-                            provided a sense of community as we navigated launching OER initiatives<br>
-                            at our own campuses. Learning about other schools’ successes and<br>
-                            frustrations each month was inspiring. I learned so many new techniques<br>
-                            and innovative ideas that I could then apply at my own campus. I loved<br>
-                            the structure of this program. It’s inspiring to see how many students are<br>
-                            impacted by OER adoption – the numbers really add up quickly.
-                        </p>
-                        <div class="tdl_body_regards">
-                            <p class="tdlb_regards_name">– Erin Davis</p>
-                            <p class="tdlb_regards_desc">Distance Education Library Services Coordinator</p>
+                </div>                
+                <div id="testimonialBody-{element.pk}">
+                    <div class="toggle_dataList_body">
+                        <div class="tdlb_container">
+                            <div id="testimonialHead-{element.pk}" class="testimonial_head">Testimonials</div>
+                            <i class="fas fa-quote-left"></i>
+                            <p class="tdl_body_desc">Teaming up with the other OpenStax Institutional Partner schools
+                                <br> provided a sense of community as we navigated launching OER initiatives
+                                <br> at our own campuses. Learning about other schools’ successes and
+                                <br> frustrations each month was inspiring. I learned so many new techniques
+                                <br> and innovative ideas that I could then apply at my own campus. I loved
+                                <br> the structure of this program. It’s inspiring to see how many students are
+                                <br> impacted by OER adoption – the numbers really add up quickly.
+                            </p>
+                            <div class="tdl_body_regards">
+                                <p class="tdlb_regards_name">– Erin Davis</p>
+                                <p class="tdlb_regards_desc">Distance Education Library Services Coordinator</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="toggle_dataList_footer">
-                    <span id="sub_testimonial">submit your testimonials</span> >
+                    <div class="toggle_dataList_footer">
+                        <span id="sub_testimonial">submit your testimonials</span> >
+                    </div>
                 </div>
 
             </div>
