--- a/src/app/pages/impact-dev/studentinfo/studentinfo.scss
+++ b/src/app/pages/impact-dev/studentinfo/studentinfo.scss
@@ -1,30 +1,27 @@
 @import 'pattern-library/core/pattern-library/headers';
 
     .studentinfodiv{
-        top: 3rem;
+
         @include wider-than(60rem) {
-            height: 74rem;
-            position: relative;
-            width: 100%;
+            height: 105rem;
+
         }
         @include width-up-to($phone-max) {
-            height: 1250px;
-            position: relative;
-            width: 100%;
+
+
         }
        
     }
 
     .studentinfobox{
-        padding-left: 12%;
-        padding-top: 100px;
-        margin-left:5%;
-        
+        height: 120rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
         @include width-up-to($phone-max) {
-            padding-left: 4%;
-            padding-top: 35px;
-            margin-left:5%;
+            height: 120rem;
+            justify-content: normal;
         }
         @media (min-width: 768px) and (max-width: 1024px) {
             padding-left: 3%;
@@ -33,54 +30,62 @@
         }
         
         @include wider-than(85rem) {
-            margin-left: 8%;        
+       
         }
         @include wider-than(100rem) {
-            margin-left: 9%;
+
         }
         @include wider-than(120rem) {
-            margin-left: 14%;
+
         }
         @include wider-than(160rem) {
-            margin-left: 21%;
+
         }
         @include wider-than(180rem) {
-            margin-left: 27%;
+
         }
 
 
             @include wider-than(60rem) {
-                bottom: 0;
-                height: 71rem;
-                left: 0;
-                position: absolute;
-                right: 0;
+
             }
             #first_photo{
-                float: left;
-                position: relative;
-                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                @include width-up-to($phone-max) {
+                    flex-direction: column;
+                }
             }
             #second_photo{
-                float: left;
-                width: 100%;
-                position: relative; 
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                @include width-up-to($phone-max) {
+                    flex-direction: column;
+                }
             }
 
             .girl_imgdiv{
-                float: left;
-                width:286.85px;
-                 
-            }
-            .girl_txtdiv{ 
-                float: left;
-               
-            }
-        
-            #stds_img{
-                float: left;
+                bottom: 18%;
                 position: relative;
-                height: 450px;
+                @include width-up-to($phone-max) {
+                    bottom: unset;
+                    position: unset;
+                }
+            }
+
+            .girl_txtdiv{ 
+                margin-right: 4%;
+            }
+
+            .stds_imgdiv{
+                margin-right: 12%;
+            }
+
+            #stds_img{
+                position: relative;
+                bottom: 25%;
 
                 @include width-up-to($phone-max) {
                     height: 300px;
@@ -89,11 +94,6 @@
                 }
             }
             .std_txtdiv{ 
-                position: relative;
-                float: left;
-                margin-left: 130px;
-                margin-top: 100px; 
-                position: relative;
 
                 @include width-up-to($phone-max) {
                 margin-left: 0px;
@@ -182,9 +182,7 @@
 
 
             #girl_img{
-                position: relative;
-                height: 450px;
-                margin-top: -40%;
+            
                 @include width-up-to($phone-max) {
                     margin-top: 30%;
                     height: 300px;
