--- a/src/app/pages/impact-dev/statistics/stat.html
+++ b/src/app/pages/impact-dev/statistics/stat.html
@@ -2,46 +2,54 @@
 
 
         <div class="col1">
-            <div class="col-in">
-                <div class="txt1">
-                    3.7
-                     <div class="txt2"> Million </div> 
-                </div>
-                <div class="scd_txt"> Student use Openstax textbook </div>
-
+            <div class="col-img-div">
+                    <img class="col-img" src="/images/home/statmap1.png" alt="bag logo">
+            </div>
+            <div class="col-txt">
+            <div class="uper_txt">
+                <div class="u_txt1">3.7</div>
+                <div class="u_txt2">Million</div> 
+            </div>
+            <div class="lower_txt">Student use Openstax textbook</div>
             </div>
         </div>
 
-        <div class="col2 ">
-            <div class="col-in">
-                <div class="txt1">
-                    47
-                    <div class="txt2">%</div>
-                </div>
-                <div class="scd_txt"> Of degree-granting  institutions in US use  Openstax </div>
-
+        <div class="col1">
+            <div class="col-img-div">
+                <img class="col-img" src="/images/home/statmap2.png" alt="statmap logo">
+            </div>
+            <div class="col-txt">
+            <div class="uper_txt">
+                <div class="u_txt1">47</div>
+                <div class="u_txt2">%</div>
+            </div>
+            <div class="lower_txt"> Of degree-granting  institutions in US use  Openstax </div>
+        </div>
+        </div>
+        
+        <div class="col1">
+            <div class="col-img-div">
+                <img class="col-img" src="/images/home/statmap3.png" alt="statmap logo">
+            </div>
+                <div class="col-txt">
+                    <div class="uper_txt">
+                        <div class="u_txt1">$389</div>
+                        <div class="u_txt2"> Million </div> 
+                    </div>
+                <div class="lower_txt">Student save since 2012</div>
             </div>
         </div>
-        <div class="col3 ">
-            <div class="col-in">
-                <div class="txt1">
-                    $389
-                    <div class="txt2"> Million </div> 
-                </div>
-                <div class="scd_txt"> Student save since 2012 </div>
 
+        <div class="col1">
+            <div class="col-img-div">
+                <img class="col-img" src="/images/home/statmap4.png" alt="statmap logo">
             </div>
-        </div>
-        <div class="col4">
-            <div class="col-in">
-                <div class="txt1">
-                    12,000
-                    <div class="txt2"> + </div>
-                </div>
-
-                <div class="scd_txt"> Higher ed institutions use Openstax </div>
-
-
+            <div class="col-txt">
+                <div class="uper_txt">
+                        <div class="u_txt1">12,000</div>
+                        <div class="u_txt2"> + </div>
+                    </div>
+                <div class="lower_txt"> Higher ed institutions use Openstax </div>
             </div>
         </div>
 
