fixing responsivness issues of  ready to join  section on  mobile screens

--- a/src/app/pages/impact-dev/studentinfo/studentinfo.html
+++ b/src/app/pages/impact-dev/studentinfo/studentinfo.html
@@ -5,7 +5,7 @@
                 <div id="girl_txt_head">Ready to join the OpenStax movement?</div>
                 <p id="girl_txt_body">We’re proud of how far we’ve come, but we need YOU to continue our mission of increasing student access to education.
                     Let us know you're using OpenStax and put your school on the map!</p>
-                <div class="sbox"> I'm using OpenStax</div>
+                <div><button class="sbox">I'm using OpenStax</button></div>
             </div>
             <div class="girl_imgdiv">
                 <img id="girl_img" src="/images/home/girl-join-the-movement.png" alt="Student">
@@ -24,7 +24,7 @@
                 and expand our library. With your help, we can bring open education resources to even more students across the
                 world.</p>
                 <br>
-            <div class="sbox"> I want to give</div>
+            <div><button class="sbox">I'm using OpenStax</button></div>
         </div>
     </div>
        
