--- a/src/app/pages/press/bookings/booking/booking.scss
+++ b/src/app/pages/press/bookings/booking/booking.scss
@@ -3,10 +3,21 @@
 .booking {
     display: grid;
     grid-gap: $normal-margin;
-    grid-template-columns: 10rem 1fr;
+    grid-template-columns: auto 1fr;
+
+    .card {
+        @extend %card;
+
+        height: 10rem;
+        overflow: hidden;
+        position: relative;
+        width: 10rem;
+    }
 
     img {
-        max-width: 100%;
+        margin-left: 50%;
+        max-height: 100%;
+        transform: translateX(-50%);
     }
 
     .span-2 {
