--- a/src/app/pages/research/research.html
+++ b/src/app/pages/research/research.html
@@ -44,7 +44,7 @@
                     {pub.authors} ({pub.date}). {pub.title}
                 </div>
                 <div data-html="publications[{$item}].excerpt"></div>
-                <a href="{pub.downloadLink}">Download pdf <span class="fa fa-external-link-alt"></span></a>
+                <a href="{pub.downloadLink}">View PDF<span class="fa fa-external-link-alt"></span></a>
             </div>
         </div>
     </section>
