Add Careers page

--- a/src/app/components/shell/footer/footer.html
+++ b/src/app/components/shell/footer/footer.html
@@ -20,6 +20,9 @@
                     <a href="/accessibility-statement">Accessibility Statement</a>
                 </li>
                 <li>
+                    <a href="/careers">Careers</a>
+                </li>
+                <li>
                     <a href="https://github.com/openstax">Open Source Code</a>
                 </li>
                 <li>
