--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -5,21 +5,16 @@ $button-size: 2.8rem;
 .page-header {
     align-items: center;
     background-color: rgba(ui-color(white), 0.98);
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
     left: 0;
-    position: fixed;
+    max-width: 100vw;
+    position: static;
     right: 0;
     top: 0;
     width: 100%;
     z-index: 1;
 
-    @include wider-than($tablet-max) {
-        left: 0;
-        position: absolute;
-        right: 0;
-        top: 0;
+    &.fixed {
+        position: fixed;
     }
 
     a {
