--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -192,17 +192,14 @@ sup {
 }
 
 #header {
+    height: fit-content;
+    overflow-x: hidden;
     z-index: 2;
 }
 
 #main {
     flex: 1 0 auto;
-    padding-top: 5.6rem;
     z-index: 0;
-
-    @include wider-than($tablet-max) {
-        padding-top: 11rem;
-    }
 
     &.with-overlay {
         z-index: 1;
